# AVMuxer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AVIOContextWrapper.hpp  BaseMuxer.hpp  DataStructures.hpp  Logger.hpp  MediaContainerContext.hpp  MediaContainerWrapper.hpp  MediaStreamContext.hpp  MediaStreamWrapper.hpp  Mp4Muxer.hpp  Muxer.hpp  MuxerException.hpp  utils.hpp
src/: AVIOContextWrapper.cpp  BaseMuxer.cpp  CMakeLists.txt  MediaContainerContext.cpp  MediaStreamContext.cpp  Mp4Muxer.cpp  utils.cpp
test/blackbox/: CMakeLists.txt  TestLogger.hpp  audio_video_test.cpp  video_only_test.cpp
test/unit/: CMakeLists.txt  MediaContainerMock.hpp  MediaStreamMock.hpp  Mp4MuxerTest.cpp  MuxerTest.cpp
